		- added explicit cast to math parser
		- added loads fade in in module-aerodyn
		  (Jens van Schelve, Patrick Rix)
		- added "drivep" (derivative) function to model namespace
		- added measures in aircraft instruments
		- added axial constitutive law wrapper
		- added simple gear joint (Eduardo Okabe)
		- added kinetic energy in automatic structural element
		  private data
	Backward compatibility issues:
		- "overwrite" option of "setenv" changed
		- incompatible module-aerodyn syntax change
		- reference systems of aircraft instruments changed
		- reworked orientation description within node input
		  according to documentation (was inconsistent)
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fixed rotor radius in module-aerodyn (Jens van Schelve)
		- fixed redeclaration without definition of already defined
		  ifndef vars
		- fixed reference orientation reset after initial assembly
		  (Reinhard Resch)
		- fixed inertia computation with structural displacement
		  nodes (noted by Mattia Alioli)
		- fixed data initialization in external struct mapping
		  with membrane elements
		- fixed bug in Cardano hinge initial assembly

MBDyn 1.5.5
	Enhancements:
		- added Umfpack solver iterative refinement support
		  (Reinhard Resch)
		- added built in drive callers interface to module-octave
		  (Reinhard Resch)
		- added scaling support to Naive, Umfpack and KLU solvers
		  (based on patch by Reinhard Resch)
	Backward compatibility issues:
		- old binary modal joint databases no longer supported
		- cyclocopter inflow models moved to module-cyclocopter
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
		- RTAI and multithread support incompatible
		- module-octave and multithread support incompatible
	Bug fixes:
		- fix binary modal joint database in MinGW